<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login"
    tools:context=".LoginActivity"
    android:gravity="bottom"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="345dp"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:alpha="0.9"
        android:background="@drawable/custom_edittext"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp">

        <LinearLayout
            android:layout_width="305dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="24dp"
            android:textAlignment="center">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textAlignment="center"
                android:textColor="#009688"
                android:textSize="25sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/lk_usuario"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="40dp"
                android:autofillHints=""
                android:background="@drawable/custom_edittext"
                android:drawableStart="@drawable/baseline_attribution_24"
                android:drawablePadding="8dp"
                android:ems="10"
                android:hint="@string/user"
                android:importantForAutofill="yes"
                android:inputType="text"
                android:textColor="@color/black"
                android:textColorHint="@color/cardview_dark_background" />

            <EditText
                android:id="@+id/lk_contrasena"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="15dp"
                android:autofillHints=""
                android:background="@drawable/custom_edittext"
                android:drawableStart="@drawable/baseline_lock_24"
                android:drawablePadding="8dp"
                android:ems="10"
                android:hint="@string/password"
                android:importantForAutofill="yes"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textColorHint="@color/cardview_dark_background" />

            <Button
                android:id="@+id/bt_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:backgroundTint="@color/ColorBase"
                android:text="Iniciar" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="¿Aun no estas Registrado?"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/link_registro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Registrate!"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold" />

</LinearLayout>